syntax = "proto3";

option csharp_namespace = "Application.gRCP.Protos";

package forecasting;

service GrpcForecast {
	rpc SendDataToPredictStream (stream GrpcForecastRequest) returns (stream GrpcForecastReply);
}

message GrpcForecastRequest {
	float temperature_outside = 1;
	float temperature_inside = 2;
	float cooling_power = 3;
}

message GrpcForecastReply {
	string reply = 1;
}
